# nu_plugin_charset

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: charset.rs  main.rs
