[package]
name = "nu_plugin_charset"
version = "0.1.0"
edition = "2021"
authors = ["Horasal"]
description = "A nushell plugin for converting charsets."
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/horasal/nu_plugin_charset"
keywords = ["nushell"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chardet = "0.2.4"
encoding_rs = "0.8.32"
nu-plugin = "0.83.1"
nu-protocol = "0.83.1"
